Allow duallist to be disabled

--- a/lib/dual-list.component.html
+++ b/lib/dual-list.component.html
@@ -12,16 +12,16 @@
 			<ul [ngStyle]="{'max-height': height, 'min-height': height}" [ngClass]="{over:available.dragOver}"
 				(drop)="drop($event, confirmed)" (dragover)="allowDrop($event, available)" (dragleave)="dragLeave()">
 				<li *ngFor="let item of available.sift; let idx=index;"
-					(click)="selectItem(available.pick, item); shiftClick($event, idx, available, item)"
-					[ngClass]="{selected: isItemSelected(available.pick, item)}"
-					draggable="true" (dragstart)="drag($event, item, available)" (dragend)="dragEnd(available)"
+					(click)="disabled ? null : selectItem(available.pick, item); shiftClick($event, idx, available, item)"
+					[ngClass]="{selected: isItemSelected(available.pick, item), disabled: disabled}"
+					[draggable]="!disabled" (dragstart)="drag($event, item, available)" (dragend)="dragEnd(available)"
 				><label>{{item._name}}</label></li>
 			</ul>
 		</div>
 
 		<div class="button-bar">
 			<button type="button" class="btn btn-primary pull-left" (click)="selectAll(available)"
-				[disabled]="isAllSelected(available)">{{format.all}}</button>
+				[disabled]="disabled || isAllSelected(available)">{{format.all}}</button>
 			<button type="button" class="btn btn-default pull-right" (click)="selectNone(available)"
 				[disabled]="!isAnySelected(available)">{{format.none}}</button>
 		</div>
@@ -39,17 +39,17 @@
 		<div class="record-picker">
 			<ul [ngStyle]="{'max-height': height, 'min-height': height}" [ngClass]="{over:confirmed.dragOver}"
 				(drop)="drop($event, available)" (dragover)="allowDrop($event, confirmed)" (dragleave)="dragLeave()">
-				<li *ngFor="let item of confirmed.sift; let idx=index;"
-					(click)="selectItem(confirmed.pick, item); shiftClick($event, idx, confirmed, item)"
-					[ngClass]="{selected: isItemSelected(confirmed.pick, item)}"
-					draggable="true" (dragstart)="drag($event, item, confirmed)" (dragend)="dragEnd(confirmed)"
+				<li #itmConf *ngFor="let item of confirmed.sift; let idx=index;"
+					(click)="disabled ? null : selectItem(confirmed.pick, item); shiftClick($event, idx, confirmed, item)"
+					[ngClass]="{selected: isItemSelected(confirmed.pick, item), disabled: disabled}"
+					[draggable]="!disabled" (dragstart)="drag($event, item, confirmed)" (dragend)="dragEnd(confirmed)"
 				><label>{{item._name}}</label></li>
 			</ul>
 		</div>
 
 		<div class="button-bar">
 			<button type="button" class="btn btn-primary pull-left" (click)="selectAll(confirmed)"
-				[disabled]="isAllSelected(confirmed)">{{format.all}}</button>
+				[disabled]="disabled || isAllSelected(confirmed)">{{format.all}}</button>
 			<button type="button" class="btn btn-default pull-right" (click)="selectNone(confirmed)"
 				[disabled]="!isAnySelected(confirmed)">{{format.none}}</button>
 		</div>
