--- a/lib/dual-list.component.css
+++ b/lib/dual-list.component.css
@@ -77,6 +77,7 @@ div.record-picker::-webkit-scrollbar-thumb:hover {
 .record-picker li.disabled {
 	opacity: 0.5;
 	cursor: default;
+	background-color: inherit;
 }
 
 .record-picker li:first-child {
