--- a/lib/dual-list.component.html
+++ b/lib/dual-list.component.html
@@ -12,7 +12,7 @@
 			<ul [ngStyle]="{'max-height': height, 'min-height': height}" [ngClass]="{over:available.dragOver}"
 				(drop)="drop($event, confirmed)" (dragover)="allowDrop($event, available)" (dragleave)="dragLeave()">
 				<li *ngFor="let item of available.sift; let idx=index;"
-					(click)="selectItem(available.pick, item); shiftClick($event, idx, available, item)"
+					placement='top' ngbTooltip={{item._name}} (click)="selectItem(available.pick, item); shiftClick($event, idx, available, item)"
 					[ngClass]="{selected: isItemSelected(available.pick, item)}"
 					draggable="true" (dragstart)="drag($event, item, available)" (dragend)="dragEnd(available)"
 				><label>{{item._name}}</label></li>
